# toolchains_llvm_bootstrapped

./: .bazelrc  AGENTS.md  BUILD.bazel  MODULE.bazel  README.md  apify.bzl  cuda.bzl  defs.bzl  directory.bzl  http_bsdtar_archive.bzl  http_pkg_archive.bzl  llvm_raw.bzl  llvm_versions.json  rbe.bzl  sh_script.bzl
.github/workflows/: ci.bazelrc  ci.yaml  prebuilts-extras.sh  release_prep.sh
config/: BUILD.bazel  defs.bzl
constraints/abi/: BUILD.bazel  abis.bzl  declare_abis_constraints.bzl
constraints/libc/: libc_versions.bzl
e2e/cross_compilation/: BUILD.bazel  MODULE.bazel  rules_cc_include_dirs.patch
e2e/cuda/: BUILD.bazel  MODULE.bazel
e2e/rules_cc/: 0001-allow-files-in-format-dict.patch  BUILD.bazel  MODULE.bazel  asan_output_test.sh  defs.bzl  duplicate_static_library_failure_test.sh  fuzzer_output_test.py  fuzzer_sanitizer_output_test.py  go.mod  go.sum  kernel2.cu  msan_fail.cc  msan_output_test.sh  raw_saxpy_device.c
e2e/rules_go/: BUILD.bazel  MODULE.bazel
e2e/rules_rs/: MODULE.bazel
e2e/rules_rust/: BUILD.bazel  MODULE.bazel  rules_rust_resource_dir.patch  rust_binary_cross_build_test_suite.bzl  rust_output.patch  test_platform.sh
e2e/wasm/: MODULE.bazel  go_compiler_flags.patch  rules_go.patch
examples/picolibc/: BUILD.bazel  link_check.c
examples/rules_cc/: BUILD.bazel  MODULE.bazel  asan_fail.cc  asan_output_test.sh  build_docker.sh  defs.bzl  msan_fail.cc
examples/rules_go/: BUILD.bazel  MODULE.bazel  a.out
examples/rules_rust/: BUILD.bazel  rust_binary_cross_build_test_suite.bzl  rust_binary_hello_world_test.bzl
extensions/: BUILD.bazel  llvm_source.bzl  osx.bzl  toolchain.bzl
internal_tools/: preset.bazelrc
kernel/extension/: BUILD.bazel  BUILD.kernel-headers.tpl  BUILD.trampoline.tpl  libc_kernel_versions.bzl  make_select_kernel_headers_repository_target.bzl
libstdcxx/: BUILD.bazel  libstdcxx_stubs_assembly_files.bzl
patches/: rules_cc_preprocessor.patch
prebuilt/extras/: extra_bins_release.bzl
prebuilt/llvm/: llvm_release.bzl
runtimes/: BUILD.bazel  copy_to_resource_directory.bzl  defs.bzl  module_map.bzl
runtimes/compiler-rt/: BUILD.bazel
runtimes/cosmo/: BUILD.bazel  BUILD.tpl  cosmo_cc_library.bzl  libcxx_headers.bzl  locale_stubs.c  static_archive_file.bzl
runtimes/cosmo/extension/: cosmo.bzl
runtimes/cosmo/patches/: 0001-make-pt_blkmask-atomic.patch  0002-memchr-sse2.patch  0003-memchr-guard-mmx-builtins.patch  0004-musl-errno-runtime-cases.patch  0005-openmp-disable-mm-malloc.patch  0006-nsync-atomic-pointer-cast.patch  0007-musl-lookup-name-errno-runtime.patch  0008-clang-intrin-wrappers.patch  0009-clang-mmintrin-vector-conversion.patch  0010-disable-mmx-intrinsics.patch  0011-errno-no-nocallersavedregisters.patch  0012-disable-tmmintrin-mmx.patch  0013-tprecode8to16-conditional-neon.patch  0014-guard-max-align.patch  0016-dlmalloc-atomic-loads.patch  0017-immintrin-include-xmmintrin.patch  0018-guard-avx-includes.patch  0019-guard-avx512vlvnni.patch  0020-sigblock-external-sig.patch  0021-musl-getnameinfo-af-constants.patch  0022-mmintrin-internal-respect-cosmo-disable-mmx.patch  0023-chunkcopy-scalar-fallback.patch  0024-sysv-aarch64-local-registers.patch  0025-arm-neon-f16-compare.patch  0026-arm64-clang-compat.patch  0027-arm-neon-compare.patch  0028-arm64-fenv-demangle.patch  0029-brain16-clang-fallback.patch  0030-auto-disable-mmx-when-no-builtins.patch  0031-arm64-build-fixes.patch  0032-demangle-jmpbuf-x86.patch  0033-xmmintrin-sse-without-mmx.patch  0034-guard-avx512-popcnt-builtins.patch  0035-str-guard-arch-intrinsics.patch  0037-pthread-arm64-setjmp-constraints.patch  0038-rdseed-guard-x86.patch  0041-rdseed-body-guard-current.patch  0042-rdseed-add-endif.patch  0045-rdseed-guard-nonx86.patch  0046-mmintrin-forward-decls.patch  (+11 more)
runtimes/glibc/: BUILD.bazel  glibc_shared_library.bzl
runtimes/glibc/extension/: BUILD.bazel  BUILD.glibc-headers.tpl  BUILD.trampoline.tpl  make_select_glibc_repository_target.bzl
runtimes/libcxx/: BUILD.bazel
runtimes/libgcc/: BUILD.bazel
runtimes/libunwind/: BUILD.bazel
runtimes/mingw/: BUILD.bazel  BUILD.tpl  import_libs.bzl  mingw.BUILD.bazel
runtimes/mingw/extension/: BUILD.bazel
runtimes/mingw/patches/: BUILD.bazel
runtimes/msvc/: BUILD.bazel  BUILD_windows_sdk.tpl  BUILD_windows_sdk_common.tpl
runtimes/msvc/extension/: msvc.bzl
runtimes/musl/: BUILD.bazel
runtimes/picolibc/: BUILD.bazel
runtimes/picolibc/crt/: crt1_aarch64.S  crt1_x86_64.S
runtimes/picolibc/extension/: BUILD.bazel  picolibc.bzl
runtimes/wasi/: BUILD.tpl
runtimes/wasi/extension/: wasi.bzl
symbol_common_demo/: README.md  defined.c  duplicate_strong.s  tentative_comm.s
tests/: BUILD.bazel  main.c  main.cc
toolchain/: BUILD.bazel  README.md  cc_toolchain.bzl  declare_toolchains.bzl  exec_stage0_binary.bzl  linker_policy.bzl  module_map_names.bzl  selects.bzl
toolchain/args/: BUILD.bazel  cosmo_normalize_with_linux.h  llvm_target_triple.bzl  targets.bzl
toolchain/args/linux/: BUILD.bazel
toolchain/args/macos/: BUILD.bazel  macos_minimum_os_flag.bzl
toolchain/args/windows/: BUILD.bazel
toolchain/bootstrap/: BUILD.bazel  bootstrap_binary.bzl  declare_toolchains.bzl
toolchain/cuda/: BUILD.bazel  README.md  cc_toolchain.bzl  cuda_current_toolchain.bzl  declare_toolchains.bzl
toolchain/cuda/bootstrap/: declare_toolchains.bzl
toolchain/extension/: BUILD.bazel  llvm.bzl  osx.bzl
toolchain/features/: BUILD.bazel
toolchain/llvm/: BUILD.bazel  BUILD.llvm_release.tpl  BUILD.llvm_release_windows.tpl  llvm.bzl
toolchain/runtimes/: BUILD.bazel  README.md  (+6 more)
toolchain/stage2/: BUILD.bazel  cc_stage2_common.bzl  cc_stage2_import.bzl  cc_stage2_object.bzl  cc_stage2_shared_library.bzl  cc_stage2_static_library.bzl  cc_stage2_unsanitized_library.bzl  cc_unsanitized_library.bzl  declare_toolchains.bzl
toolchain/stage2/args/: BUILD.bazel
toolchain/stage2/args/linux/: BUILD.bazel
tools/: BUILD.bazel  bazel  defs.bzl
tools/internal/: BUILD.bazel  header_parser.cc  linker_contracts.bzl  linker_wrapper.cc  linker_wrapper_config.h  static_library_validator.cc
(+12 files in other folders)
