load("@buildifier_prebuilt//:rules.bzl", "buildifier", "buildifier_test")

platform(
    name = "rbe_platform",
    constraint_values = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
        # ubuntu:22.04 has GNU C Library (Ubuntu GLIBC 2.35-0ubuntu3.10)
        "@toolchains_llvm_bootstrapped//constraints/libc:gnu.2.35",
        "@bazel_tools//tools/cpp:clang",
    ],
    exec_properties = {
        "container-image": "docker://ubuntu:22.04",
        "OSFamily": "Linux",
    },
)

buildifier(
    name = "buildifier.fix",
    diff_command = "diff",
    exclude_patterns = ["./.git/*"],
    lint_mode = "fix",
    mode = "fix",
)

buildifier_test(
    name = "buildifier.check",
    size = "small",
    diff_command = "diff",
    exclude_patterns = ["./.git/*"],
    lint_mode = "warn",
    mode = "diff",
    no_sandbox = True,
    tags = ["no-remote-exec", "manual"],
    workspace = "//:MODULE.bazel",
)
