load("@bazel_lib//:bzl_library.bzl", "bzl_library")
load("//runtimes:module_map.bzl", "include_path", "module_map")
load("//toolchain:selects.bzl", "LLVM_VERSION")

# gazelle:map_kind bzl_library bzl_library @bazel_lib//:bzl_library.bzl

alias(
    name = "rbe_platform",
    actual = "@rbe_platform//:rbe_platform",
    visibility = ["//visibility:public"],
)

alias(
    name = "builtin_headers",
    actual = select({
        "//platforms/config:macos_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-darwin-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:linux_x86_64_prebuilt": "@llvm-toolchain-minimal-%s-linux-amd64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:linux_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-linux-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:windows_aarch64_prebuilt": "@llvm-toolchain-minimal-%s-windows-arm64//:builtin_headers" % LLVM_VERSION,
        "//platforms/config:windows_x86_64_prebuilt": "@llvm-toolchain-minimal-%s-windows-amd64//:builtin_headers" % LLVM_VERSION,
        "//conditions:default": "@llvm-toolchain-minimal-%s-linux-amd64//:builtin_headers" % LLVM_VERSION,
    }),
    visibility = ["//visibility:public"],
)

include_path(
    name = "macos_target_headers",
    srcs = [
        "//runtimes:resource_directory",
        "@macos_sdk//sysroot",
    ],
)

# This must match //toolchain:linux_toolchain_args
include_path(
    name = "linux_target_headers",
    srcs = [
        "//runtimes:resource_directory",
        "@kernel_headers//:kernel_headers_directory",
        "@llvm//runtimes/libcxx:libcxx_headers_include_search_directory",
        "@llvm//runtimes/libcxx:libcxxabi_headers_include_search_directory",
        "@llvm//sanitizers:sanitizers_headers_include_search_directory",
    ] + select({
        "@llvm//platforms/config:musl": [
            "@llvm//runtimes/musl:musl_headers_include_search_directory",
        ],
        "@llvm//platforms/config:gnu": [
            "@llvm//runtimes/glibc:glibc_headers_include_search_directory",
        ],
    }),
)

# this must match //toolchain:windows_toolchain_args
include_path(
    name = "windows_target_headers",
    srcs = [
        "//runtimes:resource_directory",
        "@llvm//runtimes/libcxx:libcxx_headers_include_search_directory",
        "@llvm//runtimes/libcxx:libcxxabi_headers_include_search_directory",
        "@mingw//:mingw_generated_headers_crt_directory",
        "@mingw//:mingw_w64_headers_crt_directory",
        "@mingw//:mingw_w64_headers_include_directory",
        "@mingw//:mingw_w64_winpthreads_include_directory",
    ],
)

include_path(
    name = "wasm_target_headers",
    srcs = [
        "//runtimes:resource_directory",
        # TODO(zbarsky): We'll want to add wasi libc headers here.
    ],
)

module_map(
    name = "module_map",
    include_path = select({
        "@platforms//os:macos": ":macos_target_headers",
        "@platforms//os:linux": ":linux_target_headers",
        "@platforms//os:windows": ":windows_target_headers",
        "@platforms//os:none": ":wasm_target_headers",
    }),
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "directory",
    srcs = ["directory.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_skylib//rules/directory",
        "@bazel_skylib//rules/directory:providers",
        "@bazel_skylib//rules/directory:subdirectory",
    ],
)

bzl_library(
    name = "http_pkg_archive",
    srcs = ["http_pkg_archive.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:repo_utils",
        "@bazel_tools//tools/build_defs/repo:utils.bzl",
    ],
)

bzl_library(
    name = "http_bsdtar_archive",
    srcs = ["http_bsdtar_archive.bzl"],
    visibility = ["//visibility:public"],
    deps = [
        "@bazel_lib//lib:repo_utils",
        "@bazel_tools//tools/build_defs/repo:bzl_srcs",
    ],
)

bzl_library(
    name = "sh_script",
    srcs = ["sh_script.bzl"],
    visibility = ["//visibility:public"],
    deps = ["@bazel_lib//lib:run_binary"],
)

bzl_library(
    name = "defs",
    srcs = ["defs.bzl"],
    visibility = ["//visibility:public"],
)

bzl_library(
    name = "rbe",
    srcs = ["rbe.bzl"],
    visibility = ["//visibility:public"],
)
