load("@bazel_lib//lib:transitions.bzl", "platform_transition_filegroup")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("//bootstrap:platforms.bzl", "PLATFORMS")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
)

[
    platform_transition_filegroup(
        name = "for_" + platform.split(":")[1],
        srcs = [
            ":main",
        ],
        target_platform = platform,
    )
    for platform in PLATFORMS
]
