load("@bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@toolchains_llvm_bootstrapped//constraints/libc:libc_versions.bzl", "LIBCS")
load("@toolchains_llvm_bootstrapped//:defs.bzl", "exec_test")

cc_library(
    name = "add",
    srcs = ["add.c"],
    hdrs = ["add.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "main",
    deps = [":add"],
    srcs = ["test.cc"],
)

#TODO(cerisier): should the toolchain provide its own list ?
PLATFORMS = [
    "@toolchains_llvm_bootstrapped//platforms:linux_x86_64",
    "@toolchains_llvm_bootstrapped//platforms:linux_aarch64",
    # "@toolchains_llvm_bootstrapped//platforms:macos_x86_64",
    # "@toolchains_llvm_bootstrapped//platforms:macos_aarch64",
    "@toolchains_llvm_bootstrapped//platforms:windows_amd64",
    "@toolchains_llvm_bootstrapped//platforms:windows_arm64",
] + [
    "@toolchains_llvm_bootstrapped//platforms:linux_x86_64_{}".format(libc) for libc in LIBCS
] + [
    "@toolchains_llvm_bootstrapped//platforms:linux_aarch64_{}".format(libc) for libc in LIBCS
]

[
    platform_transition_binary(
        name = "main_" + platform.split(":")[-1],
        target_platform = platform,
        binary = ":main",
    ) for platform in PLATFORMS
]

##################################

# Make sure we have at least 1 test in the repository.
# `build_test` requires genrule, do not use!

# cc_test does not work because dynamic linking is broken
# cc_test(
#     name = "cc_test",
#     deps = [":add"],
#     srcs = ["test.cc"],
# )

write_file(
    name = "write_dummy_sh",
    out = "dummy.sh",
    content = [],
    is_executable = True,
)

exec_test(
    sh_test,
    name = "dummy_test",
    srcs = ["dummy.sh"],
)
