load("@bazel_lib//lib:transitions.bzl", "platform_transition_binary")
load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_cc//cc:cc_library.bzl", "cc_library")
load("@rules_cc//cc:cc_test.bzl", "cc_test")
load("@toolchains_llvm_bootstrapped//constraints/libc:libc_versions.bzl", "LIBCS")
load("@toolchains_llvm_bootstrapped//:defs.bzl", "exec_test")

cc_library(
    name = "add",
    srcs = ["add.c"],
    hdrs = ["add.h"],
    visibility = ["//visibility:public"],
)

cc_binary(
    name = "main",
    deps = [":add"],
    srcs = ["test.cc"],
)

#TODO(cerisier): should the toolchain provide its own list ?
PLATFORMS = [
    "@toolchains_llvm_bootstrapped//platforms:linux_x86_64",
    "@toolchains_llvm_bootstrapped//platforms:linux_aarch64",
    # "@toolchains_llvm_bootstrapped//platforms:macos_x86_64",
    # "@toolchains_llvm_bootstrapped//platforms:macos_aarch64",
    "@toolchains_llvm_bootstrapped//platforms:windows_amd64",
    "@toolchains_llvm_bootstrapped//platforms:windows_arm64",
] + [
    "@toolchains_llvm_bootstrapped//platforms:linux_x86_64_{}".format(libc) for libc in LIBCS
] + [
    "@toolchains_llvm_bootstrapped//platforms:linux_aarch64_{}".format(libc) for libc in LIBCS
]

[
    platform_transition_binary(
        name = "main_" + platform.split(":")[-1],
        target_platform = platform,
        binary = ":main",
    ) for platform in PLATFORMS
]

##################################

# Make sure we have at least 1 test in the repository.
# `build_test` requires genrule, do not use!

exec_test(
    cc_test,
    name = "cc_test",
    deps = [":add"],
    srcs = ["test.cc"],
    linkstatic = True,
    tags = ["no-remote"],
)
