load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("//:defs.bzl", "ubsan_cc_binary", "msan_cc_binary", "asan_cc_binary")

cc_binary(
    name = "main",
    srcs = ["main.cc"],
)

# TODO(zbarsky): Turn more of this into a macro once we have more sanitizers?
ubsan_cc_binary(
    name = "ubsan_fail",
    srcs = ["ubsan_fail.cc"],
)

sh_test(
    name = "ubsan_output_test",
    srcs = ["ubsan_output_test.sh"],
    data = [":ubsan_fail"],
    env = {"BINARY": "$(rootpath :ubsan_fail)"},
)

msan_cc_binary(
    name = "msan_fail",
    srcs = ["msan_fail.cc"],
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

sh_test(
    name = "msan_output_test",
    srcs = ["msan_output_test.sh"],
    data = [":msan_fail"],
    env = {"BINARY": "$(rootpath :msan_fail)"},
    target_compatible_with = select({
        "@platforms//os:linux": [],
        "//conditions:default": ["@platforms//:incompatible"],
    }),
)

asan_cc_binary(
    name = "asan_fail",
    srcs = ["asan_fail.cc"],
    linkopts = [
        "-Wl,-undefined,dynamic_lookup",
        "-Wl,-U,___lsan_default_options",
        "-Wl,-U,___lsan_default_suppressions",
        "-Wl,-U,___lsan_is_turned_off",
    ],
)

sh_test(
    name = "asan_output_test",
    srcs = ["asan_output_test.sh"],
    data = [":asan_fail"],
    env = {"BINARY": "$(rootpath :asan_fail)"},
)